20240409-卡住的行事曆

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,4 +33,5 @@ transport-api = { group = "com.google.android.datatransport", name = "transport-
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
