--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
 		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
 		tools:ignore="ScopedStorage" />
 
+	<uses-permission android:name="android.permission.INTERNET" />
+
 
 	<application
         android:allowBackup="true"
