--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_solf"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
+		android:usesCleartextTraffic="true"
         tools:targetApi="31"
         tools:ignore="ObsoleteSdkInt">
 
