--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ mediarouter = "1.6.0"
 legacySupportV4 = "1.0.0"
 activity = "1.8.0"
 transportApi = "3.2.0"
+cameraView = "1.3.3"
 
 [libraries]
 activation = { module = "javax.activation:activation", version.ref = "activation" }
@@ -34,6 +35,7 @@ mediarouter = { group = "androidx.mediarouter", name = "mediarouter", version.re
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 transport-api = { group = "com.google.android.datatransport", name = "transport-api", version.ref = "transportApi" }
+camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
