--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,24 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+	<uses-permission
+		android:name="android.permission.WRITE_SETTINGS"
+		tools:ignore="ProtectedPermissions" />
+
+	<uses-permission
+		android:name="android.permission.READ_EXTERNAL_STORAGE"
+		tools:ignore="ScopedStorage" />
+
+	<uses-permission
+		android:name="android.permission.CAMERA"
+		tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
+
 	<uses-permission
 		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
 		tools:ignore="ScopedStorage" />
-
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-		tools:ignore="ScopedStorage" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-		tools:ignore="ScopedStorage" />
-	<uses-permission android:name="android.permission.CAMERA"
-		tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
 
 	<application
         android:allowBackup="true"
@@ -36,7 +43,6 @@
             tools:ignore="RedundantLabel">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
