--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.BIND_AUTOFILL_SERVICE" />
 	<uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
 
 	<uses-permission
@@ -22,6 +23,7 @@
 	<uses-permission
 		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
 		tools:ignore="ScopedStorage" />
+
 
 	<application
         android:allowBackup="true"
