--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.BIND_AUTOFILL_SERVICE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
 
+	<uses-permission android:name="android.permission.BIND_AUTOFILL_SERVICE"
+		tools:ignore="ProtectedPermissions" />
 	<uses-permission
 		android:name="android.permission.WRITE_SETTINGS"
 		tools:ignore="ProtectedPermissions" />
@@ -23,7 +25,6 @@
 	<uses-permission
 		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
 		tools:ignore="ScopedStorage" />
-
 
 	<application
         android:allowBackup="true"
@@ -49,5 +50,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+		<receiver
+			android:name=".AppStateReceiver"
+			android:enabled="false"
+			android:exported="true"
+			tools:ignore="IntentFilterExportedReceiver">
+			<intent-filter>
+				<action android:name="com.example.myapplication.NOTIFY" />
+			</intent-filter>
+		</receiver>
     </application>
 </manifest>
