--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
 
+	<uses-permission
+		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+		tools:ignore="ScopedStorage" />
+	<uses-permission
+		android:name="android.permission.READ_EXTERNAL_STORAGE"
+		tools:ignore="ScopedStorage" />
+
 	<uses-permission android:name="android.permission.BIND_AUTOFILL_SERVICE"
 		tools:ignore="ProtectedPermissions" />
 	<uses-permission
