--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
 
 		<activity
 			android:name=".MainActivity"
+			android:screenOrientation="unspecified"
 			android:exported="true"
 			android:label="@string/app_name"
 			android:theme="@style/Theme.MyApplication.NoActionBar"
